fix(prefix-alignment): make the alignment of prefix icons the same for all fields. Also take disabled property into account for the icon #BQ-9504

--- a/src/app/modules/form-controls/date/datetimepicker/datetimepicker.component.scss
+++ b/src/app/modules/form-controls/date/datetimepicker/datetimepicker.component.scss
@@ -2,4 +2,10 @@
 
 .mat-form-field {
   margin-bottom: $bq-base-margin;
+
+  button {
+    &[matprefix] {
+      width: 24px;
+    }
+  }
 }
